fixed layout bug, created reusable components for homepage

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,3 +4,7 @@ li:hover > * {
 li:hover > span {
     color: white !important;
 }
+
+.aside-desktop {
+    height: calc(100vh - 30px);
+}
